Added settings and command palette along with other validation api
